--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
   <div id="bg-wrapper">
-    <img id="bg-image" src="https://example.com/aesthetic-bg.jpg" width="100%" height="100%"/>
+    <img id="bg-image" src="https://example.com/aesthetic-bg.jpg" width="100%" height="100%" alt="Background Image"/>
     <div id="player"></div>
   </div>
 
@@ -26,17 +26,17 @@
   <div id="pomodoro-container">
     <div id="pomodoro-durations">
       <div class="form-check">
-          <input class="form-check-input" type="radio" name="timerType" id="pomodoro" value="pomodoro" checked>
-          <label class="form-check-label btn" for="pomodoro">Pomodoro</label>
-          <div class="pomo-counter">&nbsp;</div>
+        <input class="form-check-input" type="radio" name="timerType" id="pomodoro" value="pomodoro" checked>
+        <label class="form-check-label btn" for="pomodoro">Pomodoro</label>
+        <div class="pomo-counter">&nbsp;</div>
       </div>
       <div class="form-check">
-          <input class="form-check-input" type="radio" name="timerType" id="short" value="short">
-          <label class="form-check-label btn" for="short">Short Break</label>
+        <input class="form-check-input" type="radio" name="timerType" id="short" value="short">
+        <label class="form-check-label btn" for="short">Short Break</label>
       </div>
       <div class="form-check">
-          <input class="form-check-input" type="radio" name="timerType" id="long" value="long">
-          <label class="form-check-label btn" for="long">Long Break</label>
+        <input class="form-check-input" type="radio" name="timerType" id="long" value="long">
+        <label class="form-check-label btn" for="long">Long Break</label>
       </div>
     </div>
 
@@ -78,6 +78,42 @@
     </div>
     <div id="bottom-mid"></div>
     <div id="bottom-right"></div>
+  </div>
+
+  <!-- 設定用モーダル -->
+  <div id="settingsModal" class="modal hidden">
+    <div class="modal-content">
+      <h2>Settings</h2>
+      <label>
+        Pomodoro (minutes):
+        <input type="number" id="pomodoroLength" min="1" max="90" value="25"/>
+      </label><br/>
+      <label>
+        Short Break (minutes):
+        <input type="number" id="shortBreakLength" min="1" max="30" value="5"/>
+      </label><br/>
+      <label>
+        Long Break (minutes):
+        <input type="number" id="longBreakLength" min="1" max="60" value="10"/>
+      </label><br/>
+      <label>
+        Play sound on finish:
+        <input type="checkbox" id="playSoundCheck" checked>
+      </label><br/>
+      <label>
+        Theme:
+        <select id="themeSelect">
+          <option value="default">Default</option>
+          <option value="forest">Forest</option>
+          <option value="cafe">Cafe</option>
+          <option value="night">Night</option>
+        </select>
+      </label>
+      <div class="modal-actions">
+        <button id="saveSettingsBtn" class="btn">Save</button>
+        <button id="closeSettingsBtn" class="btn">Close</button>
+      </div>
+    </div>
   </div>
 
   <script src="./script.js" defer></script>
