--- a/public/index.html
+++ b/public/index.html
@@ -3,13 +3,12 @@
 <head>
   <meta charset="UTF-8"/>
   <meta name="viewport" content="width=device-width,initial-scale=1">
-  <title>Pomodoro Timer with Enhanced Stats</title>
+  <title>Pomodoro Timer with Auto Monotone Theme</title>
   <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@600&family=Inter:wght@100..900&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="./style.css">
 </head>
 <body>
   <div id="bg-wrapper">
-    <img id="bg-image" src="https://example.com/default.jpg" width="100%" height="100%" alt="Background Image"/>
     <div id="player"></div>
   </div>
 
@@ -40,12 +39,24 @@
 
     <div id="pomodoro-clock-actions">
       <button id="pomodoro-start" class="btn btn-primary">
-        <span id="play-icon">start</span>
-        <span id="pause-icon" class="hidden">pause</span>
+        <span id="play-icon">▶</span>
+        <span id="pause-icon" class="hidden">⏸</span>
       </button>
-      <button id="pomodoro-stop" class="no-style bg-transparent" title="Reset timer">🔄</button>
-      <button id="pomodoro-settings" class="no-style bg-transparent" title="Settings">⚙️</button>
-      <button id="pomodoro-stats" class="no-style bg-transparent" title="View Stats">📈</button>
+      <button id="pomodoro-stop" class="no-style bg-transparent" title="Reset timer">
+        <svg width="24" height="24" fill="#fff" viewBox="0 0 24 24">
+          <path d="M13 3a9 9 0 11-9 9H2a10 10 0 1010-10v1z"/><path d="M12 1v5l3-3-3-2z"/>
+        </svg>
+      </button>
+      <button id="pomodoro-settings" class="no-style bg-transparent" title="Settings">
+        <svg width="24" height="24" fill="#fff" viewBox="0 0 24 24">
+          <path d="M10.12 2.1a1 1 0 011.76 0l1.1 2.05a8.03 8.03 0 014.03 0l1.1-2.05a1 1 0 011.76 0l1.3 2.4a1 1 0 01-.15 1.15l-1.7 1.7c.13.53.2 1.1.2 1.65s-.07 1.12-.2 1.65l1.7 1.7a1 1 0 01.15 1.15l-1.3 2.4a1 1 0 01-1.76 0l-1.1-2.05a8.03 8.03 0 01-4.03 0l-1.1 2.05a1 1 0 01-1.76 0l-1.3-2.4a1 1 0 01.15-1.15l1.7-1.7A8.04 8.04 0 018 12c0-.55.07-1.12.2-1.65l-1.7-1.7a1 1 0 01-.15-1.15l1.3-2.4zM12 14a2 2 0 100-4 2 2 0 000 4z"/>
+        </svg>
+      </button>
+      <button id="pomodoro-stats" class="no-style bg-transparent" title="View Stats">
+        <svg width="24" height="24" fill="#fff" viewBox="0 0 24 24">
+          <path d="M3 13h2v8H3zm8-5h2v13h-2zM8 8H6v18h2zm10-4h2v22h-2z"/>
+        </svg>
+      </button>
     </div>
   </div>
 
@@ -72,10 +83,11 @@
       <label>
         Theme:
         <select id="themeSelect">
-          <option value="default">Default</option>
+          <option value="default">Default (Manual)</option>
           <option value="forest">Forest</option>
           <option value="cafe">Cafe</option>
           <option value="night">Night</option>
+          <option value="auto">Auto</option>
         </select>
       </label>
 
