--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8"/>
   <meta name="viewport" content="width=device-width,initial-scale=1">
-  <title>Pomodoro Timer (Auto Monotone Theme)</title>
+  <title>Pomodoro Timer</title>
   <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@600&family=Inter:wght@100..900&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="./style.css">
 </head>
@@ -15,7 +15,8 @@
     <div id="daily-work-time">Today's Work: <span id="dailyWorkDisplay">00:00:00</span></div>
   </div>
 
-  <div id="main-content">
+  <!-- メインコンテナはpomodoro-containerにする -->
+  <div id="pomodoro-container">
     <div class="mode-selection">
       <label class="form-check">
         <input class="form-check-input" type="radio" name="timerType" value="pomodoro" checked>
@@ -58,7 +59,6 @@
     </div>
   </div>
 
-  <!-- Settings Modal -->
   <div id="settingsModal" class="modal hidden">
     <div class="modal-content">
       <h2>Settings</h2>
@@ -83,7 +83,6 @@
     </div>
   </div>
 
-  <!-- Stats Modal -->
   <div id="statsModal" class="modal hidden">
     <div class="modal-content stats-modal-content">
       <h2>Work Stats</h2>
