--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8"/>
   <meta name="viewport" content="width=device-width,initial-scale=1">
-  <title>Pomodoro Timer</title>
+  <title>Monotone Pomodoro Timer</title>
   <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@600&family=Inter:wght@100..900&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="./style.css">
 </head>
@@ -11,11 +11,20 @@
   <div id="bg-wrapper"></div>
 
   <div id="top-bar">
-    <img class="logo" src="https://via.placeholder.com/100x40?text=LOGO" alt="Logo"/>
-    <div id="daily-work-time">Today's Work: <span id="dailyWorkDisplay">00:00:00</span></div>
+    <div id="daily-work-container">
+      <div id="daily-work-time">
+        Today's Work: <span id="dailyWorkDisplay">00:00:00</span>
+      </div>
+      <button id="toggleDailyWork" class="icon-button" title="Hide/Show Today's Work">
+        <!-- Eye icon -->
+        <svg width="24" height="24" stroke="#fff" fill="none" stroke-width="2" viewBox="0 0 24 24">
+          <path d="M1 12s4-7 11-7 11 7 11 7-4 7-11 7-11-7-11-7z"/>
+          <circle cx="12" cy="12" r="3"/>
+        </svg>
+      </button>
+    </div>
   </div>
 
-  <!-- メインコンテナはpomodoro-containerにする -->
   <div id="pomodoro-container">
     <div class="mode-selection">
       <label class="form-check">
@@ -37,23 +46,39 @@
     </div>
 
     <div class="action-buttons">
-      <button id="pomodoro-start" class="btn btn-primary">
-        <span id="play-icon">▶</span>
-        <span id="pause-icon" class="hidden">⏸</span>
-      </button>
-      <button id="pomodoro-stop" class="no-style bg-transparent" title="Reset timer">
-        <svg width="24" height="24" fill="#fff" viewBox="0 0 24 24">
-          <path d="M13 3a9 9 0 11-9 9H2a10 10 0 1010-10v1z"/><path d="M12 1v5l3-3-3-2z"/>
+      <!-- Start/Pause -->
+      <button id="pomodoro-start" class="icon-button" title="Start/Pause">
+        <svg id="play-icon" width="24" height="24" stroke="#fff" fill="none" stroke-width="2" viewBox="0 0 24 24">
+          <path d="M8 5v14l11-7z"/>
+        </svg>
+        <svg id="pause-icon" class="hidden" width="24" height="24" stroke="#fff" fill="none" stroke-width="2" viewBox="0 0 24 24">
+          <path d="M6 4h4v16H6zM14 4h4v16h-4z"/>
         </svg>
       </button>
-      <button id="pomodoro-settings" class="no-style bg-transparent" title="Settings">
-        <svg width="24" height="24" fill="#fff" viewBox="0 0 24 24">
-          <path d="M10.12 2.1a1 1 0 011.76 0l1.1 2.05a8.03 8.03 0 014.03 0l1.1-2.05a1 1 0 011.76 0l1.3 2.4a1 1 0 01-.15 1.15l-1.7 1.7c.13.53.2 1.1.2 1.65s-.07 1.12-.2 1.65l1.7 1.7a1 1 0 01.15 1.15l-1.3 2.4a1 1 0 01-1.76 0l-1.1-2.05a8.03 8.03 0 01-4.03 0l-1.1 2.05a1 1 0 01-1.76 0l-1.3-2.4a1 1 0 01.15-1.15l1.7-1.7A8.04 8.04 0 018 12c0-.55.07-1.12.2-1.65l-1.7-1.7a1 1 0 01-.15-1.15l1.3-2.4zM12 14a2 2 0 100-4 2 2 0 000 4z"/>
+
+      <!-- Reload -->
+      <button id="pomodoro-stop" class="icon-button" title="Reset timer">
+        <svg width="24" height="24" stroke="#fff" fill="none" stroke-width="2" viewBox="0 0 24 24">
+          <path d="M20 11a8.1 8.1 0 00-15.5-2M4 4v5h5"/>
+          <circle cx="12" cy="12" r="8"/>
         </svg>
       </button>
-      <button id="pomodoro-stats" class="no-style bg-transparent" title="View Stats">
-        <svg width="24" height="24" fill="#fff" viewBox="0 0 24 24">
-          <path d="M3 13h2v8H3zm8-5h2v13h-2zM8 8H6v18h2zm10-4h2v22h-2z"/>
+
+      <!-- Settings -->
+      <button id="pomodoro-settings" class="icon-button" title="Settings">
+        <svg width="24" height="24" stroke="#fff" fill="none" stroke-width="2" viewBox="0 0 24 24">
+          <circle cx="12" cy="12" r="3"/>
+          <path d="M19.4 15a1.74 1.74 0 00.33 1.82l.06.06a2 2 0 01-.94 3.37A2 2 0 0117 21a2.09 2.09 0 00-1-.27 2 2 0 00-1.35.53l-.06.06a1.74 1.74 0 00-.33 1.82L14 23a2 2 0 01-2 2 2 2 0 01-2-2l-.06-.06a1.74 1.74 0 00-1.82-.33H7a2 2 0 01-3.37-.94 2 2 0 01.27-1 2.09 2.09 0 00-.53-1.35l-.06-.06a1.74 1.74 0 00-1.82-.33H1a2 2 0 01-2-2 2 2 0 012-2l.06-.06a1.74 1.74 0 00.33-1.82V9a2 2 0 013.37-.94 2 2 0 011 1 2.09 2.09 0 001.35-.53l.06-.06a1.74 1.74 0 001.82-.33H9a2 2 0 012-2 2 2 0 012 2h.06a1.74 1.74 0 001.82.33l.06-.06A2.09 2.09 0 0017 7a2 2 0 012 2v.06a1.74 1.74 0 00.33 1.82l.06.06a2.09 2.09 0 001.35.53 2 2 0 012 2z"/>
+        </svg>
+      </button>
+
+      <!-- Stats -->
+      <button id="pomodoro-stats" class="icon-button" title="View Stats">
+        <svg width="24" height="24" stroke="#fff" fill="none" stroke-width="2" viewBox="0 0 24 24">
+          <path d="M3 3v18h18"/>
+          <rect x="7" y="10" width="2" height="5"/>
+          <rect x="11" y="6" width="2" height="9"/>
+          <rect x="15" y="4" width="2" height="11"/>
         </svg>
       </button>
     </div>
