--- a/public/index.html
+++ b/public/index.html
@@ -46,13 +46,10 @@
     </div>
 
     <div class="action-buttons">
-      <!-- Start button: with play/pause icons -->
       <button id="pomodoro-start" class="start-button" title="Start/Pause">
-        <!-- Play (Feather: play) -->
         <svg id="play-icon" viewBox="0 0 24 24">
           <polygon points="5 3 19 12 5 21 5 3"/>
         </svg>
-        <!-- Pause (Feather: pause), hidden by default -->
         <svg id="pause-icon" class="hidden" viewBox="0 0 24 24">
           <rect x="6" y="4" width="4" height="16"/>
           <rect x="14" y="4" width="4" height="16"/>
@@ -60,7 +57,6 @@
         <span id="start-text">start</span>
       </button>
 
-      <!-- Reload (Feather: rotate-cw) -->
       <button id="pomodoro-stop" class="icon-button" title="Reset timer">
         <svg viewBox="0 0 24 24">
           <polyline points="23 4 23 10 17 10"/>
@@ -68,13 +64,34 @@
         </svg>
       </button>
 
-      <!-- Settings (Feather: settings) -->
       <button id="pomodoro-settings" class="icon-button" title="Settings">
-        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-settings"><circle cx="12" cy="12" r="3"></circle><path d="M19.4 15a1.65 1.65 0 0 0 .33 1.82l.06.06a2 2 0 0 1 0 2.83 2 2 0 0 1-2.83 0l-.06-.06a1.65 1.65 0 0 0-1.82-.33 1.65 1.65 0 0 0-1 1.51V21a2 2 0 0 1-2 2 2 2 0 0 1-2-2v-.09A1.65 1.65 0 0 0 9 19.4a1.65 1.65 0 0 0-1.82.33l-.06.06a2 2 0 0 1-2.83 0 2 2 0 0 1 0-2.83l.06-.06a1.65 1.65 0 0 0 .33-1.82 1.65 1.65 0 0 0-1.51-1H3a2 2 0 0 1-2-2 2 2 0 0 1 2-2h.09A1.65 1.65 0 0 0 4.6 9a1.65 1.65 0 0 0-.33-1.82l-.06-.06a2 2 0 0 1 0-2.83 2 2 0 0 1 2.83 0l.06.06a1.65 1.65 0 0 0 1.82.33H9a1.65 1.65 0 0 0 1-1.51V3a2 2 0 0 1 2-2 2 2 0 0 1 2 2v.09a1.65 1.65 0 0 0 1 1.51 1.65 1.65 0 0 0 1.82-.33l.06-.06a2 2 0 0 1 2.83 0 2 2 0 0 1 0 2.83l-.06.06a1.65 1.65 0 0 0-.33 1.82V9a1.65 1.65 0 0 0 1.51 1H21a2 2 0 0 1 2 2 2 2 0 0 1-2 2h-.09a1.65 1.65 0 0 0-1.51 1z"></path></svg>
-        
+        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" 
+             viewBox="0 0 24 24" fill="none" stroke="currentColor" 
+             stroke-width="2" stroke-linecap="round" stroke-linejoin="round" 
+             class="feather feather-settings">
+          <circle cx="12" cy="12" r="3"></circle>
+          <path d="M19.4 15a1.65 1.65 0 0 0 .33 1.82l.06.06
+                   a2 2 0 0 1 0 2.83 2 2 0 0 1-2.83 0l-.06-.06
+                   a1.65 1.65 0 0 0-1.82-.33 1.65 1.65 0 0 0-1 1.51V21
+                   a2 2 0 0 1-2 2 2 2 0 0 1-2-2v-.09
+                   A1.65 1.65 0 0 0 9 19.4a1.65 1.65 0 0 0-1.82.33l-.06.06
+                   a2 2 0 0 1-2.83 0 2 2 0 0 1 0-2.83l.06-.06
+                   a1.65 1.65 0 0 0 .33-1.82 1.65 1.65 0 0 0-1.51-1H3
+                   a2 2 0 0 1-2-2 2 2 0 0 1 2-2h.09
+                   A1.65 1.65 0 0 0 4.6 9a1.65 1.65 0 0 0-.33-1.82l-.06-.06
+                   a2 2 0 0 1 0-2.83 2 2 0 0 1 2.83 0l.06.06
+                   a1.65 1.65 0 0 0 1.82.33H9
+                   a1.65 1.65 0 0 0 1-1.51V3
+                   a2 2 0 0 1 2-2 2 2 0 0 1 2 2v.09
+                   a1.65 1.65 0 0 0 1 1.51 1.65 1.65 0 0 0 1.82-.33l.06-.06
+                   a2 2 0 0 1 2.83 0 2 2 0 0 1 0 2.83l-.06.06
+                   a1.65 1.65 0 0 0-.33 1.82V9
+                   a1.65 1.65 0 0 0 1.51 1H21
+                   a2 2 0 0 1 2 2 2 2 0 0 1-2 2h-.09
+                   a1.65 1.65 0 0 0-1.51 1z"></path>
+        </svg>
       </button>
 
-      <!-- Stats (Feather: activity as stats icon) -->
       <button id="pomodoro-stats" class="icon-button" title="View Stats">
         <svg viewBox="0 0 24 24">
           <polyline points="22 12 18 12 15 21 9 3 6 12 2 12"/>
