--- a/public/index.html
+++ b/public/index.html
@@ -47,9 +47,11 @@
 
     <div class="action-buttons">
       <button id="pomodoro-start" class="start-button" title="Start/Pause">
+        <!-- Play icon -->
         <svg id="play-icon" viewBox="0 0 24 24">
           <polygon points="5 3 19 12 5 21 5 3"/>
         </svg>
+        <!-- Pause icon -->
         <svg id="pause-icon" class="hidden" viewBox="0 0 24 24">
           <rect x="6" y="4" width="4" height="16"/>
           <rect x="14" y="4" width="4" height="16"/>
@@ -67,8 +69,7 @@
       <button id="pomodoro-settings" class="icon-button" title="Settings">
         <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" 
              viewBox="0 0 24 24" fill="none" stroke="currentColor" 
-             stroke-width="2" stroke-linecap="round" stroke-linejoin="round" 
-             class="feather feather-settings">
+             stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
           <circle cx="12" cy="12" r="3"></circle>
           <path d="M19.4 15a1.65 1.65 0 0 0 .33 1.82l.06.06
                    a2 2 0 0 1 0 2.83 2 2 0 0 1-2.83 0l-.06-.06
