--- a/public/index.html
+++ b/public/index.html
@@ -99,29 +99,34 @@
     </div>
   </div>
 
-  <div id="settingsModal" class="modal hidden">
-    <div class="modal-content">
-      <h2>Settings</h2>
-      <label>Pomodoro (min): <input type="number" id="pomodoroLength" min="1" max="90" value="25"/></label><br/>
-      <label>Short Break (min): <input type="number" id="shortBreakLength" min="1" max="30" value="5"/></label><br/>
-      <label>Long Break (min): <input type="number" id="longBreakLength" min="1" max="60" value="10"/></label><br/>
-      <label>Play sound on finish: <input type="checkbox" id="playSoundCheck" checked></label><br/>
-      <label>Theme:
-        <select id="themeSelect">
-          <option value="default">Default</option>
-          <option value="forest">Forest</option>
-          <option value="cafe">Cafe</option>
-          <option value="night">Night</option>
-          <option value="auto">Auto</option>
-        </select>
-      </label>
+<!-- Settings Modal 内に "Now Record" ボタンと "autoRecordDaily" チェックボックスを追加 -->
+<div id="settingsModal" class="modal hidden">
+  <div class="modal-content">
+    <h2>Settings</h2>
+    <label>Pomodoro (min): <input type="number" id="pomodoroLength" min="1" max="90" value="25"/></label><br/>
+    <label>Short Break (min): <input type="number" id="shortBreakLength" min="1" max="30" value="5"/></label><br/>
+    <label>Long Break (min): <input type="number" id="longBreakLength" min="1" max="60" value="10"/></label><br/>
+    <label>Play sound on finish: <input type="checkbox" id="playSoundCheck" checked></label><br/>
+    <label>Theme:
+      <select id="themeSelect">
+        <option value="default">Default</option>
+        <option value="forest">Forest</option>
+        <option value="cafe">Cafe</option>
+        <option value="night">Night</option>
+        <option value="auto">Auto</option>
+      </select>
+    </label><br/>
+    <label>Auto record daily to Notion: <input type="checkbox" id="autoRecordDailyCheck"></label><br/><br/>
 
-      <div class="modal-actions">
-        <button id="saveSettingsBtn" class="btn">Save</button>
-        <button id="closeSettingsBtn" class="btn">Close</button>
-      </div>
+    <button id="recordNowBtn" class="btn">Now Record</button>
+
+    <div class="modal-actions">
+      <button id="saveSettingsBtn" class="btn">Save</button>
+      <button id="closeSettingsBtn" class="btn">Close</button>
     </div>
   </div>
+</div>
+
 
   <div id="statsModal" class="modal hidden">
     <div class="modal-content stats-modal-content">
