Fix route configuration and update UI elements

--- a/public/index.html
+++ b/public/index.html
@@ -119,6 +119,8 @@
     <label>Auto record daily to Notion: <input type="checkbox" id="autoRecordDailyCheck"></label><br/><br/>
 
     <button id="recordNowBtn" class="btn">Now Record</button>
+    <small>※Only record during active Pomodoro sessions</small>
+    <small>※作業中（pomodoro稼働中）のみ記録可能</small>
 
     <div class="modal-actions">
       <button id="saveSettingsBtn" class="btn">Save</button>
